Responsive and mobile friendly design

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,12 @@
   <h1>On This Day</h1>
   <h3>Learn a new piece of relevant trivia each and every day</h3>
 </header>
+<section class="date-header">
+  <h2 id="date"></h2>
+</section>
 <article class="card" id="pwa">
   <div class="card__image">
     <img src="./src/images/otd.png" alt="PWAs are great!">
-    <h2 id="date"></h2>
   </div>
   <div class="card__content">
     <h3>Today in US History 🇺🇸</h3>
