Manifest and service worker added. Icons updated

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <title>On This Day</title>
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
   <link rel="stylesheet" href="./src/css/app.css">
+  <link rel="manifest" href="./manifest.json">
 </head>
 <body>
 <header class="main-header">
